--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "globals": "^16.3.0",
     "vite": "^6.3.1"
   },
-    "engines": {
+  "engines": {
     "node": ">=20.0.0"
+  },
+  "dependencies": {
+    "on-change": "^5.0.1",
+    "yup": "^1.6.1"
   }
 }
