--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "i18next": "^25.3.2",
     "on-change": "^5.0.1",
     "yup": "^1.6.1"
   }
