--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@eslint/js": "^9.31.0",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
+    "sass-embedded": "^1.89.2",
     "vite": "^6.3.1"
   },
   "engines": {
@@ -20,7 +21,9 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "bootstrap": "^5.3.7",
     "i18next": "^25.3.2",
+    "lodash": "^4.17.21",
     "on-change": "^5.0.1",
     "yup": "^1.6.1"
   }
