--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
+    "@playwright/test": "^1.54.1",
+    "@types/node": "^24.1.0",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
     "sass-embedded": "^1.89.2",
