--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "devDependencies": {
+    "@eslint/compat": "^1.3.1",
     "@eslint/js": "^9.31.0",
     "@playwright/test": "^1.54.1",
+    "@stylistic/eslint-plugin": "^5.2.2",
     "@types/node": "^24.1.0",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
@@ -24,6 +26,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "eslint-plugin-compat": "^6.0.2",
     "i18next": "^25.3.2",
     "lodash": "^4.17.21",
     "on-change": "^5.0.1",
